--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Deploy to github pages
         run: |
-          apt install nodejs
-          node --version
-          npm --version
+          sudo apt install nodejs
+          sudo node --version
+          sudo npm --version
           
